nixidy/generated/prod/stalwart/Deployment-stalwart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: stalwart
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stalwart
  name: stalwart
  namespace: mail
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: stalwart
      app.kubernetes.io/instance: stalwart
      app.kubernetes.io/name: stalwart
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 4455e12988da4f84a18771f142decf3417f7af88ebdcc5eac1ca8613d44201c3
      labels:
        app.kubernetes.io/controller: stalwart
        app.kubernetes.io/instance: stalwart
        app.kubernetes.io/name: stalwart
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: stalwart
          image: stalwartlabs/stalwart:v0.15.5@sha256:b6c2a04a79695136d5e2c16e9da0254135d0c3f3b1f8147873e812916b0ae8c4
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: http
          name: stalwart
          ports:
            - containerPort: 25
              name: smtp
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: http
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/live
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /opt/stalwart/etc/config.toml
              name: config
              readOnly: true
              subPath: config.toml
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: stalwart
      volumes:
        - configMap:
            name: stalwart
          name: config
        - name: data
          persistentVolumeClaim:
            claimName: stalwart
