nixidy/generated/prod/stalwart/Service-stalwart.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/service: stalwart
  name: stalwart
  namespace: mail
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
  selector:
    app.kubernetes.io/controller: stalwart
    app.kubernetes.io/instance: stalwart
    app.kubernetes.io/name: stalwart
  type: ClusterIP
