nixidy/generated/prod/stalwart/HTTPRoute-stalwart.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart
  namespace: mail
spec:
  hostnames:
    - mail.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oathkeeper-proxy
          namespace: identity
          port: 4455
